--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <a class="logo" href="#">
             <img
               class="logo__imege"
-              src="./horizont-logo.svg"
+              src="img/horizont-logo.svg"
               alt="logo: Best Tour Plan"
             />
           </a>
